@@ -1,6 +1,7 @@
 2.1.0 2012-??-??
 ========
  * improvements
+ * adds warning for misconfiguration
 
 2.0.1 2012-07-14
 ========
